# grepx-pricing-app

./: dump.rdb  env.common  env.template  load-env.sh  prefect_server.db-shm  prefect_server.db-wal  requirements.txt  run.sh  setup.sh
business-tasks/: __init__.py  config_loader.py
business-tasks/database/: __init__.py  csv_adapter.py  factory.py
business-tasks/providers/: __init__.py  base_provider.py  config_loader.py  constants.py  custom_provider.py  jugad_provider.py  provider_config.py  provider_factory.py  storage.py  yahoo_provider.py  yahoo_provider_balance_sheet.py  yahoo_provider_cash_flow.py
business-tasks/services/: __init__.py  data_service.py
business-tasks/tasks/: __init__.py  config.py  pricing_tasks.py  stock_tasks.py  test_prefect.py  test_task.py
config/: task_config.py
data/: tickers.csv
database/: adapter.py  duckdb_adapter.py  mongo_adapter.py
grepx-dagster-server/: requirements.txt  run.sh  workspace.yaml
grepx-dagster-server/learning/: example_01_simple_asset.py
grepx-task-generator-server/: requirements.txt  run.sh
servers/grepx-airflow-server/: airflow.cfg  env.airflow  requirements.txt  run.sh  setup.sh  simple_auth_manager_passwords.json
servers/grepx-apache-airflow-server/: env.airflow  run.sh  setup.sh
servers/grepx-celery-server/: env.celery  requirements.txt  run.sh  setup.sh
servers/grepx-dagster-server/: dagster.yaml  env.dagster  requirements.txt  run.sh  setup.sh  workspace.yaml
servers/grepx-database-server-orchastrator/: env.database
servers/grepx-database-server-orchastrator/libs/grepx-connection-registry/: README.md  pyproject.toml  requirements.txt  setup.py
servers/grepx-database-server-orchastrator/libs/grepx-connection-registry/src/grepx_connection_registry/: __init__.py  connection_base.py  connection_factory.py  connection_manager.py  connection_protocol.py  connection_registry.py
servers/grepx-database-server-orchastrator/libs/grepx-orm/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
servers/grepx-database-server-orchastrator/libs/grepx-orm/examples/: __init__.py  basic_usage.py  custom_backend.py
servers/grepx-database-server-orchastrator/libs/grepx-orm/src/backends/: __init__.py  base.py  discovery.py  mongodb.py  postgresql.py  registry.py  sqlite.py
servers/grepx-database-server-orchastrator/libs/grepx-orm/src/core/: __init__.py  base.py  connection.py  exceptions.py  field.py  meta_model.py  model.py  query.py  session.py
servers/grepx-database-server-orchastrator/libs/grepx-orm/src/dialects/: __init__.py  base_dialect.py  no_sql_dialect.py  sql_dialect.py
servers/grepx-prefect-server/: README.md  env.prefect  prefect.yaml  requirements.txt  run.sh  setup.sh  start.sh  stop.sh  workspace.yaml
servers/grepx-task-generator-server/: env.generator  requirements.txt  run.sh  (+1 more)
test/: test_task_flow.py  verify_tasks.py
(+268 files in other folders)
